fix bg not to stretch

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,8 +58,6 @@ img {
 
 .background-image {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
 }
 
 .navbar .container p {
